--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pouch-app-init",
+  "name": "app-init",
   "version": "1.0.0",
   "description": "",
-  "main": "pouch-app-init.js",
+  "main": "app-init.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,6 @@
   "dependencies": {
     "async": "^1.3.0",
     "config": "^1.14.0",
-    "pouchdb": "^3.6.0",
     "underscore": "^1.8.3"
   }
 }
